day 11 part two, not yet run

--- a/advent11/pom.xml
+++ b/advent11/pom.xml
@@ -17,6 +17,15 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+                <includes>
+                    <include>*.sh</include>
+                </includes>
+                <targetPath>${project.basedir}</targetPath>
+            </resource>
+        </resources>
     </build>
     <packaging>jar</packaging>
 
