--- a/advent22/pom.xml
+++ b/advent22/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>jsr305</artifactId>
             <version>3.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 
