--- a/advent22/pom.xml
+++ b/advent22/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.mike10004</groupId>
-    <artifactId>advent17</artifactId>
+    <artifactId>aoc2016-day22</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
